@startuml
set namespaceSeparator ::
note as N1
Implements the command-line interface for Dogen.

UML representation:

\image html dogen.cli/modeling/dogen.cli.svg
end note

class configuration #F7E5FF {
    +{field} logging boost::optional<utility::log::logging_configuration>
    +{field} api dogen::configuration
    +{field} cli cli_configuration
}

configuration o-- cli_configuration

note top of configuration
All of the configuration required by the command line application.
end note

class cli_configuration <<masd::fluent>> #F7E5FF {
    +{field} activity boost::variant<generation_configuration, conversion_configuration, dumpspecs_configuration>
    +{field} byproduct_directory boost::filesystem::path
}

cli_configuration o-- generation_configuration
cli_configuration o-- conversion_configuration
cli_configuration o-- dumpspecs_configuration

note top of cli_configuration
Configuration specific to the CLI application.
end note

class generation_configuration <<masd::fluent>> #F7E5FF {
    +{field} reference_model_directories std::vector<boost::filesystem::path>
    +{field} target boost::filesystem::path
    +{field} output_directory boost::filesystem::path
}

note top of generation_configuration
Configuration related to code generation.
end note

class conversion_configuration <<masd::fluent>> #F7E5FF {
    +{field} source boost::filesystem::path
    +{field} destination std::string
}

note top of conversion_configuration
Configuration for the model conversion.
end note

class dumpspecs_configuration <<masd::fluent>> #F7E5FF {
    +{field} style reporting_style
}

note top of dumpspecs_configuration
Dumps all the specs about this version of dogen.
end note

class configuration_validator <<dogen::handcrafted::typeable>> #FFFACD {
}

configuration_validator o-- configuration: validates

class command_line_parser <<dogen::handcrafted::typeable::header_only>> #FFFACD {
}

command_line_parser o-- parser_exception: throws
command_line_parser o-- configuration: creates

note top of command_line_parser
Interface for a command-line parser of the dogen options.
end note

class parser_exception <<masd::exception>> #E8C2F8 {
}

note top of parser_exception
A fatal error has occurred during option parsing.
end note

class application <<dogen::handcrafted::typeable>> #FFFACD {
}

application o-- application_exception: throws
application o-- configuration: configured by

note top of application
Entry point for the dogen command line application.
end note

class application_exception <<masd::exception>> #E8C2F8 {
}

note top of application_exception
A fatal error has occurred whilst executing the application.
end note

class program_options_parser <<dogen::handcrafted::typeable>> #FFFACD {
}

command_line_parser <|-- program_options_parser
note top of program_options_parser
Command-line parser implementation using boost program options.
end note

class initializer <<dogen::handcrafted::typeable>> #FFFACD {
}

class main <<masd::entry_point>> #DDA9F3 {
}

main o-- command_line_parser: reads configuration using
main o-- initializer
main o-- application: executes
main o-- configuration

class CMakeLists <<masd::build::cmakelists, dogen::handcrafted::cmake>> #99CB99 {
}

@enduml
